# LLM-Reliability-Framework

./: .gitignore  README.md  e -i c6c378c  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml  release.yml
Tests/: __init__.py
Tests/benchmark/: test_benchmark_engine.py
Tests/bootstrap/: test_provider_bootstrap.py
Tests/comparison/: test_comparison_engine.py
Tests/engine/: __init__.py  test_evaluation_engine.py  test_scoring_engine.py
Tests/factory/: test_provider_factory.py
Tests/integration/: test_evaluation_engine.py  test_evaluation_pipeline.py
Tests/providers/:  test_fake_provider.py  __init__.py
Tests/reporters/: test_json_reporter.py
Tests/scoring/: test_weighted_score.py
Tests/validators/: __init__.py  substring_validator.py  test_validator_registry.py
cli/: main.py
config/: config.yaml  pipeline.yaml  profile_loader.py  providers.yaml  scoring_profiles.yaml
data/: fake_provider_responses.json
docs/: CHANGELOG.md  api_reference.md  architecture.md  class_diagram.puml  contributing.md  getting_started.md
docs/ADR/:  ADR-001-robot-orchestrator.md  ADR-002-pipeline.md  (+5 more)
libraries/: evaluation_library.py
providers/: __init__.py  abstract_sdk_provider.py  base_provider.py  claude_provider.py  fake_provider.py  gemini_provider.py  openai_provider.py
reporters/: __init__.py  base_reporters.py  benchmark_html_reporter.py  benchmark_json_reporter.py  comparison_json_reporter.py  json_reporter.py  model_comparison_reporter.py
validators/: Substring_Validator.py  __init__.py  base_validator.py  confidence_validator.py
(+98 files in other folders)
