[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evalforge"
version = "1.0.0"
description = "LLM Evaluation Framework"
authors = [
    {name = "Your Name"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pyyaml",
    "requests",
    "robotframework",
]

[project.scripts]
evalforge = "cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]